# aimbase

./: .env.docker  .gitignore  .mcp.json  CLAUDE.md  aimbase.code-workspace  docker-compose.yml
python-sidecar/: Dockerfile  Dockerfile.agent  Dockerfile.evaluation  Dockerfile.safety  pyproject.toml
python-sidecar/data/templates/: a73f314b-d2a3-4cbc-ae45-9effd469b560.pptx
python-sidecar/src/agent/: config.py  reasoning.py  server.py
python-sidecar/src/evaluation/: __init__.py  config.py  drift_detector.py  engine.py  server.py
python-sidecar/src/rag_pipeline/: __main__.py  config.py  db.py  prompt_client.py  server.py
python-sidecar/src/rag_pipeline/models/: schemas.py
python-sidecar/src/rag_pipeline/tools/: advanced_parser.py  chart_renderer.py  chunker.py  code_executor.py  compressor.py  contextual_chunker.py  document_generator.py  document_intelligence.py  document_reader.py  embedder.py  evaluator.py  file_template.py  (+14 more)
python-sidecar/src/safety/: config.py  engine.py  guardrails.py  server.py  toxic_references.py
python-sidecar/tests/: conftest.py  test_chunker.py  test_compressor.py  test_drift_detector.py  test_embedder.py  test_evaluation_e2e.py  test_evaluation_engine.py  test_evaluation_server.py  test_finetuner.py  test_guardrails.py  test_ingestor.py  test_multimodal_embedder.py  test_parser.py  test_query_transformer.py  test_reasoning.py  test_reranker.py  test_safety_engine.py  test_safety_masking_e2e.py  test_safety_recognizers.py  test_safety_recognizers_alpha.py  test_safety_server.py  test_scraper.py  test_searcher.py  test_self_rag.py  test_server.py
(+1114 files in other folders)
